--- a/style_detail.css
+++ b/style_detail.css
@@ -1,8 +1,32 @@
 .body {
-    height: 100vh;
+    height: 100%;
     margin:0;
     overflow: hidden;
+    cursor: url(./stickers/hand-cursor.webp), auto;
     }
+
+
+    #ethic {
+        font-family: Helvetica, sans-serif;
+        color: #000000;
+        font-size: 20px;
+        background: #fcfcfc;
+        padding: 10px 20px 10px 20px;
+        border: solid #000000 2px;
+        text-decoration: none;
+        justify-self: start;
+      }
+
+      #unethic {
+        font-family: Helvetica, sans-serif;
+        color: #000000;
+        font-size: 20px;
+        background: #fcfcfc;
+        padding: 10px 20px 10px 20px;
+        border: solid #000000 2px;
+        text-decoration: none;
+        justify-self: end;
+      }
 
     .airtable-image{
         width: 100px; 
@@ -40,14 +64,14 @@
 .main_fruit
 {
     display: grid;
-    grid-template-columns: auto auto auto auto auto;
+    grid-template-columns: auto auto;
     padding: 10px;
     width:1000px;
     margin:auto;
 }
 
 
-.header{
+.filters-container{
     height: 10%;
     width: 100%;
     display: grid;
@@ -58,6 +82,7 @@
     grid-auto-flow:column;  
     grid-gap:10px; 
     overflow:auto;
+
   }
 
 
@@ -138,6 +163,7 @@ img{
     max-width:100%;
     max-height:100%;
     justify-content: center;
+    z-index: 1;
 }
 
 .fruit_old
@@ -148,19 +174,22 @@ img{
 
 .fruit_corusel_item{
     width: 120px;
-
 }
 
 
 .fruit_corusel
 {
+    border-style: solid;
     border-color: black;
+    border-width: 2px;
     display: grid;
-    grid-template-columns: auto auto auto auto auto auto auto auto;
-    padding: 10px;
-    width:1000px;
+    grid-template-columns: auto auto auto auto auto;
+    padding: 2px;
+    width:1415px;
     margin:auto;
-    bottom: 0;
+    bottom: 8px;
+    position: absolute;
+    justify-items: center;
 }
 
 .halos{
@@ -188,6 +217,7 @@ img{
         justify-content:center;
         align-items:center;
     }
+
 }
 
 @media screen and (min-width: 1200px) {
