--- a/style.css
+++ b/style.css
@@ -1,20 +1,10 @@
 body {
     background-color: yellow;
     height: 100vh;
+    width: 100vw;
     margin:0;
     overflow: hidden;
     }
-
-
-            
-    /* @font-face {
-    font-family: "Neue Haas Black";
-    src: url('./fonts/neue-haas/NHaasGroteskDSPro-95Blk.woff') format('woff'),
-         url('./fonts/neue-haas/NHaasGroteskDSPro-95Blk.woff2') format('woff2');
-    font-weight: 400;
-    font-style: normal;
-    font-display: swap;
-    } */
 
 .main{
     height: 100%;
