--- a/style_detail.css
+++ b/style_detail.css
@@ -1,4 +1,4 @@
-.body {
+body {
     height: 100vh;
     width: 100vw;
     margin:0;
@@ -6,6 +6,11 @@
     cursor: url(./stickers/hand-cursor.webp), auto;
     }
 
+.encase{
+    height: 100vh;
+    width: 100vw;
+    margin:0;
+}
 
     #ethic {
         font-family: Helvetica, sans-serif;
@@ -16,6 +21,19 @@
         border: solid #000000 2px;
         text-decoration: none;
         justify-self: start;
+    
+      }
+
+       #ethicParent {
+        position: absolute;
+        left: 0;
+        top: 0;
+      } 
+
+      #unethicParent{
+        position: absolute;
+        left: 0;
+        top: 0;
       }
 
       #unethic {
@@ -27,18 +45,19 @@
         border: solid #000000 2px;
         text-decoration: none;
         justify-self: end;
+    
       }
 
     .airtable-image{
-        width: 100px; 
+        width: 30%; 
       }
 
 
       .airtable-item{
-        position: absolute;
+        position: relative;
         left: 10rem;
         top: 40%;
-        z-index: 2;
+        z-index: 5;
       }
       
       .filter-show{
@@ -74,7 +93,6 @@
 
 .filters-container{
     height: 10%;
-    width: 100vw;
     display: grid;
     padding: 2px;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -90,8 +108,9 @@ img{
     z-index: 1;
     max-width: 100%;
     max-height: 100%;
-    justify-content: center;
- 
+    justify-items: center;
+    width: 100%;
+    height: auto;
 }
 
 .fruit_old{
@@ -100,7 +119,7 @@ img{
 }
 
 .fruit_corusel_item{
-    width: 20vw;
+    width: 30%;
     height: auto;
 }
 
@@ -113,85 +132,11 @@ img{
     display: grid;
     grid-auto-flow: column;
     grid-template-columns: auto auto auto auto auto;
-    padding: 2px;
-    column-span: 5;
-    margin:auto;
-    bottom: 8px;
+    padding: 5px;
+    column-span: all;
+    margin:10%;
+    bottom: 1%;
     position: absolute;
     justify-items: center;
 }
 
-
-/* 
-@media screen and (min-width: 1440px) {
-    .main_fruit,
-    .fruit_corusel,{
-        overflow: auto;
-        display: flex;
-        justify-content:center;
-        align-items:center;
-    }
-
-}
-
-@media screen and (min-width: 1200px) {
-    .main_fruit,
-    .fruit_corusel,{
-        overflow: auto;
-        display: flex;
-        justify-content:center;
-        align-items:center;
-    }
-}
-
-@media screen and (min-width: 992px) and (max-width: 1200px) {
-    .main_fruit,
-    .fruit_corusel,{
-        overflow: auto;
-        display: flex;
-        justify-content:center;
-        align-items:center;
-    }
-}
-
-
-@media screen and (min-width: 768px) and (max-width: 992px) {
-    .main_fruit,
-    .fruit_corusel,{
-        overflow: auto;
-        display: flex;
-        justify-content:center;
-        align-items:center;
-    }
-}
-
-
-@media screen and (min-width: 600px) and (max-width: 768px) {
-    .main_fruit,
-    .fruit_corusel,{
-        overflow: auto;
-        display: flex;
-        justify-content:center;
-        align-items:center;
-    }
-}
-
-@media screen and (max-width: 600px) {
-    .main_fruit,
-    .fruit_corusel,{
-        overflow: auto;
-        display: flex;
-        justify-content:center;
-        align-items:center;
-    }
-}
-
-
-
-
-
-
-
-
-
- */
