--- a/style_detail.css
+++ b/style_detail.css
@@ -10,6 +10,11 @@ body {
     height: 100vh;
     width: 100vw;
     margin:0;
+
+    display: grid;
+grid-template-rows: repeat(4, 1fr);
+grid-column-gap: 0px;
+grid-row-gap: 3px;
 }
 
     #ethic {
@@ -27,13 +32,13 @@ body {
        #ethicParent {
         position: absolute;
         left: 0;
-        top: 0;
+        top: 10%;
       } 
 
       #unethicParent{
         position: absolute;
         left: 0;
-        top: 0;
+        top: 40%;
       }
 
       #unethic {
@@ -57,7 +62,7 @@ body {
         position: relative;
         left: 10rem;
         top: 40%;
-        z-index: 5;
+
       }
       
       .filter-show{
@@ -88,6 +93,8 @@ body {
     padding: 10px;
     margin:auto;
 
+    grid-area: 1 / 1 / 4 / 2;
+
 }
 
 
@@ -105,7 +112,6 @@ body {
         
 img{
     position: relative;
-    z-index: 1;
     max-width: 100%;
     max-height: 100%;
     justify-items: center;
@@ -138,5 +144,7 @@ img{
     bottom: 1%;
     position: absolute;
     justify-items: center;
+    grid-area: 4 / 1 / 5 / 2;
+
 }
 
