--- a/style_detail.css
+++ b/style_detail.css
@@ -10,8 +10,7 @@ body {
     height: 100vh;
     width: 100vw;
     margin:0;
-
-    display: grid;
+display: grid;
 grid-template-rows: repeat(4, 1fr);
 grid-column-gap: 0px;
 grid-row-gap: 3px;
@@ -59,9 +58,7 @@ grid-row-gap: 3px;
 
 
       .airtable-item{
-        position: relative;
-        left: 10rem;
-        top: 40%;
+        z-index: 1;
 
       }
       
@@ -132,6 +129,7 @@ img{
 
 .fruit_corusel
 {
+    background-color: white;
     border-style: solid;
     border-color: black;
     border-width: 2px;
