--- a/style_detail.css
+++ b/style_detail.css
@@ -17,6 +17,7 @@ grid-row-gap: 3px;
 }
 
     #ethic {
+        background-color: transparent;
         font-family: Helvetica, sans-serif;
         color: #000000;
         font-size: 20px;
@@ -40,6 +41,7 @@ grid-row-gap: 3px;
       }
 
       #unethic {
+        background-color: transparent;
         font-family: Helvetica, sans-serif;
         color: #000000;
         font-size: 20px;
